--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "remote",
   "version": "0.1.0",
+  "type": "module",
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
@@ -15,7 +16,8 @@
     "cors": "^2.8.5",
     "next": "15.2.2",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "ws": "^8.18.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -28,6 +30,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/ws": "^8.18.0",
     "eslint": "^9",
     "eslint-config-next": "15.2.2",
     "jest": "^29.7.0",
